[package]
name = "ipdater"
version = "0.1.0"
edition = "2021"

[dependencies]
cloudflare = "0.10.1"
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
dwbhk = "0.1.2"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.1", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
